--- a/CV_Fr_Nicolas_REY.tex
+++ b/CV_Fr_Nicolas_REY.tex
@@ -25,8 +25,8 @@
 	\pdfinfo {
 		/Author (Nicolas REY)
 		/Title (Nicolas REY - Développeur Scala - Big Data)
-		/Subject (SUBJECT)
-		/Keywords (KEYWORDS)
+		% /Subject (SUBJECT)
+		% /Keywords (KEYWORDS)
 %		/CreationDate (D:20110109220854)
 	}
 \fi
@@ -98,7 +98,7 @@
 \newpage
 \section{Expériences}
 % \cventry{}{}{}{}{}{}
-\cventry{2012 - 2017\\4,5 ans}{Ingénieur Développeur Scala/Java}{Lateral Thoughts}{Paris}{}{
+\cventry{2012 - 2017\\4,5 ans}{Ingénieur Développeur Scala/Java - Big Data}{Lateral Thoughts}{Paris}{}{
   \small Prestations de développement
   \medskip
   \begin{itemize}
@@ -123,7 +123,7 @@
   \medskip
   \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, HDFS, Cloudera, Avro, Parquet} \\
   \textbf{Gestion de projet :} \textit{Agile} \\
-  \textbf{Entreprise :} \textit{Moteur de recherche de professionnels. Env. 5 millions d'utilisateurs quotidiens.}
+  \textbf{Entreprise :} \textit{Pages Jaunes est un moteur de recherche de professionnels. Env. 5 millions d'utilisateurs quotidiens.}
   \bigskip
 }
 \cventry{2015 - 2016\\10 mois}{Ingénieur Développeur Scala - Big Data}{Carrefour}{Paris}{}{
@@ -139,28 +139,21 @@
   \end{itemize}
   \medskip
   \textbf{Environnement :} \textit{\textbf{Scala}, \textbf{Spark}, Mesos, Akka, Cassandra, Kafka, HDFS, Cloudera, Spray, Avro} \\
-  \textbf{Entreprise :} \textit{Grande distribution. 5600 magasins en France.}
+  \textbf{Entreprise :} \textit{Carrefour est un des leader de la grande distribution. 5600 magasins en France.}
   \bigskip
 }
 \cventry{2014 - 2015\\1 an}{Ingénieur Développeur Scala/Java}{Vidal}{Paris}{}{
-	\small Développement d'APIs REST HATEOAS
+	\small Développement logiciel pour l'industrie du médicament
 	\medskip
   \begin{itemize}
-    \item Développement d'API sur une base de donnée de médicaments
-    \item Développement d'un projet de tests BDD Cucumber sur les API Vidal
+    \item Développement en Scala / Akka d'un outil de gestion de mises à jour d'un client lourd
+    \item Développement d'API RESTful HATEOAS sur une base de données de médicaments
+    \item Développement d'un projet de tests BDD en Cucumber
   \end{itemize}
   \medskip
-  \textbf{Environnement :} \textit{Java, Guava, Spring, Hibernate, Cucumber, Github, Docker} \\
-  \\
-	\small Développement d'un outil de gestion de mises à jour d'un client lourd
-	\medskip
-  \begin{itemize}
-    \item Développement du cycle de mise à jour sous forme d'une machine à état fini développée en Akka
-  \end{itemize}
-  \medskip
-  \textbf{Environnement :} \textit{\textbf{Scala}, Akka, Github} \\
+  \textbf{Environnement :} \textit{Scala, Java, Akka, Guava, Spring, Hibernate, Cucumber, Github, Docker} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
-  \textbf{Entreprise :} \textit{Éditeur d'une base de données de médicaments. Leader français de ce domaine.}
+  \textbf{Entreprise :} \textit{Vidal édite une base de données de médicaments. Leader français de ce domaine.}
   \bigskip
 }
 \cventry{2014\\9 mois}{Ingénieur Développeur Java}{SACEM}{Paris}{}{
@@ -176,7 +169,7 @@
   \textbf{Environnement Backend :} \textit{Java, Guava, Spring, Fluentlenium} \\
   \textbf{Environnement Frontend :} \textit{JavaScript, ReactJS} \\
   \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
-  \textbf{Entreprise :} \textit{Société de collecte et de redistribution des droits d'auteur sur la musique}
+  \textbf{Entreprise :} \textit{La SACEM est la société de collecte et de redistribution des droits d'auteur sur la musique en France.}
   \bigskip
 }
 \cventry{2013\\7 mois}{Ingénieur Développeur Scala}{FONTYOU}{Paris}{}{
@@ -191,7 +184,8 @@
   \medskip
   \textbf{Environnement Backend :} \textit{\textbf{Scala}, Play2!, MongoDB, Zabbix} \\
   \textbf{Environnement Frontend :} \textit{JavaScript, BackboneJS, RequireJS, HTML5/CSS3, LessCSS} \\
-  \textbf{Gestion de projet :} \textit{Agile / Scrum}
+  \textbf{Gestion de projet :} \textit{Agile / Scrum} \\
+  \textbf{Entreprise :} \textit{Fontyou est une startup qui, à l'époque où je travaillais là bas, construisait une plate-forme de co-création de polices de caractères.}
   \bigskip
 }
 \cventry{}{Références sur demande}{}{}{}{}
@@ -231,20 +225,22 @@
   \small Outil visant à réunir des petits fichiers en un plus gros fichier afin de minimiser le nombre de blocs HDFS et d'optimiser la lecture. Format supportés : Parquet, Avro, CSV compressé en GZip.
   \bigskip
 }
-\cventry{2017}{Image Docker pour Taiga}{En cours...}{}{}{
+\cventry{2017}{Image Docker pour TaigaIO}{En cours...}{}{}{
   \small Création d'une image Docker pour le logiciel \textit{taiga.io}. Taiga est un outil simplifié de gestion de tâches orienté méthodes Agile.
   \bigskip
 }
 \cventry{2015}{Serveur Personnel}{}{}{}{
-\small Installation d'un serveur de développement avec Ansible \\
-\textit{Ansible, Nginx, OwnCloud, GitLab, Linux Debian}
-\bigskip
+  \small Installation d'un serveur de développement avec Ansible \\
+  \textit{Ansible, Nginx, OwnCloud, GitLab, Linux Debian}
+  \bigskip
 }
-\cventry{2015}{Ordinateur Personnel}{}{}{}{\small Automatisation de l'installation et de la configuration de mes ordinateurs avec Ansible}
+\cventry{2015}{Ordinateur Personnel}{}{}{}{
+  \small Automatisation de l'installation et de la configuration de mes ordinateurs personnels avec Ansible
+}
 
 \section{Centres d'intérêt}
 \cvline{Informatique}{Logiciels libres, programmation fonctionnelle.}
-\cvline{Loisirs}{Salsa et autres danses, Veille technologique, photographie.}
+\cvline{Loisirs}{Salsa et autres danses, Veille technologique, Photographie.}
 \cvline{Voyages}{17 ans à Libreville (Gabon), Road trips en Europe (11 pays), 4 mois en Inde.}
 
 \closesection{}                   % needed to renewcommands
